--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,8 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: "^3.4.1"
+  flutter: 3.22.3
 
 dependencies:
   flutter:
@@ -19,7 +20,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
