--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 2.0.0
 homepage: https://github.com/jonsamwell/flutter_gherkin
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=2.0.0"
+  sdk: "^3.4.1"
+  flutter: 3.22.3
 
 dependencies:
   flutter:
